--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -2,6 +2,49 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.company.haulmont.entity/Client=Client
+com.company.haulmont.entity/Client.createdBy=Created by
+com.company.haulmont.entity/Client.createdDate=Created date
+com.company.haulmont.entity/Client.deletedBy=Deleted by
+com.company.haulmont.entity/Client.deletedDate=Deleted date
+com.company.haulmont.entity/Client.email=Email
+com.company.haulmont.entity/Client.fullName=Full name
+com.company.haulmont.entity/Client.id=Id
+com.company.haulmont.entity/Client.lastModifiedBy=Last modified by
+com.company.haulmont.entity/Client.lastModifiedDate=Last modified date
+com.company.haulmont.entity/Client.passport=Passport
+com.company.haulmont.entity/Client.phone=Phone
+com.company.haulmont.entity/Client.version=Version
+com.company.haulmont.entity/Contract=Contract
+com.company.haulmont.entity/Contract.client=Client
+com.company.haulmont.entity/Contract.createdBy=Created by
+com.company.haulmont.entity/Contract.createdDate=Created date
+com.company.haulmont.entity/Contract.dataConclusion=Data conclusion
+com.company.haulmont.entity/Contract.deletedBy=Deleted by
+com.company.haulmont.entity/Contract.deletedDate=Deleted date
+com.company.haulmont.entity/Contract.filial=Filial
+com.company.haulmont.entity/Contract.id=Id
+com.company.haulmont.entity/Contract.lastModifiedBy=Last modified by
+com.company.haulmont.entity/Contract.lastModifiedDate=Last modified date
+com.company.haulmont.entity/Contract.risksInsured=Risks insured
+com.company.haulmont.entity/Contract.sumInsured=Sum insured
+com.company.haulmont.entity/Contract.tariffRate=Tariff rate
+com.company.haulmont.entity/Contract.typeInsured=Type insured
+com.company.haulmont.entity/Contract.validity=Validity
+com.company.haulmont.entity/Contract.version=Version
+com.company.haulmont.entity/Filial=Filial
+com.company.haulmont.entity/Filial.address=Address
+com.company.haulmont.entity/Filial.createdBy=Created by
+com.company.haulmont.entity/Filial.createdDate=Created date
+com.company.haulmont.entity/Filial.deletedBy=Deleted by
+com.company.haulmont.entity/Filial.deletedDate=Deleted date
+com.company.haulmont.entity/Filial.email=Email
+com.company.haulmont.entity/Filial.id=Id
+com.company.haulmont.entity/Filial.lastModifiedBy=Last modified by
+com.company.haulmont.entity/Filial.lastModifiedDate=Last modified date
+com.company.haulmont.entity/Filial.name=Name
+com.company.haulmont.entity/Filial.phone=Phone
+com.company.haulmont.entity/Filial.version=Version
 com.company.haulmont.entity/User=User
 com.company.haulmont.entity/User.active=Active
 com.company.haulmont.entity/User.email=Email
@@ -13,6 +56,18 @@ com.company.haulmont.entity/User.timeZoneId=Time zone
 com.company.haulmont.entity/User.username=Username
 com.company.haulmont.entity/User.version=Version
 
+com.company.haulmont.screen.client/clientBrowse.caption=Clients
+com.company.haulmont.screen.client/clientBrowse.menu=Clients
+com.company.haulmont.screen.client/clientEdit.caption=Client editor
+
+com.company.haulmont.screen.contract/contractBrowse.caption=Contracts
+com.company.haulmont.screen.contract/contractBrowse.menu=Contracts
+com.company.haulmont.screen.contract/contractEdit.caption=Contract editor
+
+com.company.haulmont.screen.filial/filialBrowse.caption=Filials
+com.company.haulmont.screen.filial/filialBrowse.menu=Filials
+com.company.haulmont.screen.filial/filialEdit.caption=Filial editor
+
 com.company.haulmont.screen.login/badCredentials = Unknown login name or bad password
 com.company.haulmont.screen.login/caption = Sample
 com.company.haulmont.screen.login/emptyUsernameOrPassword=Please enter user name and password
@@ -23,8 +78,8 @@ com.company.haulmont.screen.login/passwordPlaceholder = Password
 com.company.haulmont.screen.login/usernamePlaceholder = User name
 com.company.haulmont.screen.login/welcomeLabel = Welcome to Haulmont application
 
-com.company.haulmont.screen.main/application.caption = Haulmont application
-com.company.haulmont.screen.main/application.logoLabel = Haulmont application
+com.company.haulmont.screen.main/application.caption = Haulmont
+com.company.haulmont.screen.main/application.logoLabel = Haulmont
 com.company.haulmont.screen.main/sideMenuCollapse = Collapse menu
 com.company.haulmont.screen.main/logoutBtnDescription = Logout
 
@@ -34,4 +89,4 @@ com.company.haulmont.screen.user/additional=Additional
 com.company.haulmont.screen.user/confirmPassword=Confirm password
 com.company.haulmont.screen.user/passwordsDoNotMatch=Passwords do not match
 
-com.company.haulmont/menu.application=Application
+com.company.haulmont/menu.application=Insurance Company
