added an image component to display the passport when added to the database.

--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -69,7 +69,7 @@ com.company.haulmont.screen.filial/filialBrowse.menu=Filials
 com.company.haulmont.screen.filial/filialEdit.caption=Filial editor
 
 com.company.haulmont.screen.login/badCredentials = Unknown login name or bad password
-com.company.haulmont.screen.login/caption = Sample
+com.company.haulmont.screen.login/caption = Insure
 com.company.haulmont.screen.login/emptyUsernameOrPassword=Please enter user name and password
 com.company.haulmont.screen.login/loginButton = Submit
 com.company.haulmont.screen.login/loginFailed = Login failed
