--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -20,6 +20,8 @@ com.company.haulmont.entity/Contract.client=Client
 com.company.haulmont.entity/Contract.createdBy=Created by
 com.company.haulmont.entity/Contract.createdDate=Created date
 com.company.haulmont.entity/Contract.dataConclusion=Data conclusion
+com.company.haulmont.entity/Contract.dateStart=Date start
+com.company.haulmont.entity/Contract.dateEnd =Data end
 com.company.haulmont.entity/Contract.deletedBy=Deleted by
 com.company.haulmont.entity/Contract.deletedDate=Deleted date
 com.company.haulmont.entity/Contract.filial=Filial
@@ -63,6 +65,7 @@ com.company.haulmont.screen.client/clientEdit.caption=Client editor
 com.company.haulmont.screen.contract/contractBrowse.caption=Contracts
 com.company.haulmont.screen.contract/contractBrowse.menu=Contracts
 com.company.haulmont.screen.contract/contractEdit.caption=Contract editor
+com.company.haulmont.screen.contract/validityField.dateFormat=Data format
 
 com.company.haulmont.screen.filial/filialBrowse.caption=Filials
 com.company.haulmont.screen.filial/filialBrowse.menu=Filials
