Fixed the work of the service for sending messages.

--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -19,7 +19,6 @@ com.company.haulmont.entity/Contract=Contract
 com.company.haulmont.entity/Contract.client=Client
 com.company.haulmont.entity/Contract.createdBy=Created by
 com.company.haulmont.entity/Contract.createdDate=Created date
-com.company.haulmont.entity/Contract.dataConclusion=Data conclusion
 com.company.haulmont.entity/Contract.dateStart=Date start
 com.company.haulmont.entity/Contract.dateEnd =Data end
 com.company.haulmont.entity/Contract.deletedBy=Deleted by
@@ -32,7 +31,6 @@ com.company.haulmont.entity/Contract.risksInsured=Risks insured
 com.company.haulmont.entity/Contract.sumInsured=Sum insured
 com.company.haulmont.entity/Contract.tariffRate=Tariff rate
 com.company.haulmont.entity/Contract.typeInsured=Type insured
-com.company.haulmont.entity/Contract.validity=Validity
 com.company.haulmont.entity/Contract.version=Version
 com.company.haulmont.entity/Filial=Filial
 com.company.haulmont.entity/Filial.address=Address
@@ -65,20 +63,18 @@ com.company.haulmont.screen.client/clientEdit.caption=Client editor
 com.company.haulmont.screen.contract/contractBrowse.caption=Contracts
 com.company.haulmont.screen.contract/contractBrowse.menu=Contracts
 com.company.haulmont.screen.contract/contractEdit.caption=Contract editor
-com.company.haulmont.screen.contract/validityField.dateFormat=Data format
-
 com.company.haulmont.screen.filial/filialBrowse.caption=Filials
 com.company.haulmont.screen.filial/filialBrowse.menu=Filials
 com.company.haulmont.screen.filial/filialEdit.caption=Filial editor
 
 com.company.haulmont.screen.login/badCredentials = Unknown login name or bad password
 com.company.haulmont.screen.login/caption = Insure
-com.company.haulmont.screen.login/emptyUsernameOrPassword=Please enter user name and password
+com.company.haulmont.screen.login/emptyUsernameOrPassword=Please enter login and password
 com.company.haulmont.screen.login/loginButton = Submit
 com.company.haulmont.screen.login/loginFailed = Login failed
 com.company.haulmont.screen.login/loginScreen.rememberMe=Remember me
 com.company.haulmont.screen.login/passwordPlaceholder = Password
-com.company.haulmont.screen.login/usernamePlaceholder = User name
+com.company.haulmont.screen.login/usernamePlaceholder = Login
 com.company.haulmont.screen.login/welcomeLabel = Welcome to Haulmont application
 
 com.company.haulmont.screen.main/application.caption = Haulmont
