Added a screen to display all contracts for a specific client. Added color highlighting of active contracts on the "Client contracts" tab.(custom style connected)

--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -62,6 +62,8 @@ com.company.haulmont.screen.client/clientEdit.caption=Client editor
 
 com.company.haulmont.screen.contract/contractBrowse.caption=Contracts
 com.company.haulmont.screen.contract/contractBrowse.menu=Contracts
+com.company.haulmont.screen.contract/contractClientBrowse.caption=Client contracts
+com.company.haulmont.screen.contract/contractClientBrowse.menu=Client contracts
 com.company.haulmont.screen.contract/contractEdit.caption=Contract editor
 com.company.haulmont.screen.filial/filialBrowse.caption=Filials
 com.company.haulmont.screen.filial/filialBrowse.menu=Filials
