Implemented sending emails through templates. Added a new field NUMBER to the contract table.

--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -27,6 +27,7 @@ com.company.haulmont.entity/Contract.filial=Filial
 com.company.haulmont.entity/Contract.id=Id
 com.company.haulmont.entity/Contract.lastModifiedBy=Last modified by
 com.company.haulmont.entity/Contract.lastModifiedDate=Last modified date
+com.company.haulmont.entity/Contract.number=Number
 com.company.haulmont.entity/Contract.risksInsured=Risks insured
 com.company.haulmont.entity/Contract.sumInsured=Sum insured
 com.company.haulmont.entity/Contract.tariffRate=Tariff rate
