--- a/src/main/resources/com/company/haulmont/messages_ru.properties
+++ b/src/main/resources/com/company/haulmont/messages_ru.properties
@@ -28,6 +28,7 @@ com.company.haulmont.entity/Contract.filial=Филиал
 com.company.haulmont.entity/Contract.id=Id
 com.company.haulmont.entity/Contract.lastModifiedBy=Последнее изменение
 com.company.haulmont.entity/Contract.lastModifiedDate=Дата последнего изменения
+com.company.haulmont.entity/Contract.number=Номер договора
 com.company.haulmont.entity/Contract.risksInsured=Страховые риски
 com.company.haulmont.entity/Contract.sumInsured=Сумма страховки
 com.company.haulmont.entity/Contract.tariffRate=Процентная ставка
