fixed bug of getting contract changes.

--- a/src/main/resources/com/company/haulmont/messages_ru.properties
+++ b/src/main/resources/com/company/haulmont/messages_ru.properties
@@ -75,7 +75,7 @@ com.company.haulmont.screen.filial/filialBrowse.menu=Филиалы
 com.company.haulmont.screen.filial/filialEdit.caption=Редактор филиалов
 
 com.company.haulmont.screen.login/badCredentials = Неизвестное имя для входа или неверный пароль
-com.company.haulmont.screen.login/caption = Застрахуй
+com.company.haulmont.screen.login/caption = Haulmont
 com.company.haulmont.screen.login/emptyUsernameOrPassword=Пожалуйста, введите имя пользователя и пароль
 com.company.haulmont.screen.login/loginButton = Отправить
 com.company.haulmont.screen.login/loginFailed = Авторизация не удалась
