mail templates are now created in code

--- a/src/main/resources/com/company/haulmont/messages_en.properties
+++ b/src/main/resources/com/company/haulmont/messages_en.properties
@@ -92,3 +92,5 @@ com.company.haulmont.screen.user/confirmPassword=Confirm password
 com.company.haulmont.screen.user/passwordsDoNotMatch=Passwords do not match
 
 com.company.haulmont/menu.application=Insurance Company
+
+javax.validation.constraints.Pattern.message=Invalid phone number
