--- a/src/main/resources/com/company/haulmont/messages_ru.properties
+++ b/src/main/resources/com/company/haulmont/messages_ru.properties
@@ -96,3 +96,5 @@ com.company.haulmont.screen.user/confirmPassword=Подтвердить Паро
 com.company.haulmont.screen.user/passwordsDoNotMatch=Пароли не совпадают
 
 com.company.haulmont/menu.application=Страховая компания
+
+javax.validation.constraints.Pattern.message=Неправильно указан номер
